# RAGProductionApp

./: README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/: config.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/318f5033-6eda-40ff-a2c3-8768e59f8a7a/: mutable_id_tracker.mappings  segment.json
qdrant_storage/collections/docs/0/segments/38518974-decb-48fd-a43d-8aeda46f3d10/: mutable_id_tracker.mappings  segment.json
